# zed-portfolio-presence

./: Cargo.toml  README.md  extension.toml
.github/workflows/: check.yml  release.yml
lsp/: Cargo.toml  README.md
lsp/src/: document.rs  error.rs  logger.rs  main.rs  portfolio.rs
lsp/src/config/: mod.rs  update.rs
lsp/src/service/: mod.rs  presence_service.rs
src/: portfolio_presence.rs
